// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Checkbox calls onChecked handler when clicked 1`] = `
<div>
  <label
    class="
    checkbox-component
    default
    right
    
    
    
    
  "
    for="checkbox-id-test"
  >
    <span
      class="
    label-text-component
    
    
    
    checkbox-component-label
  "
    >
      Example label
    </span>
    <input
      aria-aria-describedby="checkbox-validation-message-id-test"
      class="checkbox-component-input"
      id="checkbox-id-test"
      type="checkbox"
      value="example-value"
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="
    validation-message
    error
    checkbox-validation-message}
  "
      id="validation-message-id-test"
      role="alert"
    >
      Error text
    </span>
  </label>
</div>
`;

exports[`Checkbox > Checkbox calls onChecked handler when clicked 2`] = `
<div>
  <label
    class="
    checkbox-component
    default
    right
    
    
    
    
  "
    for="checkbox-id-test"
  >
    <span
      class="
    label-text-component
    
    
    
    checkbox-component-label
  "
    >
      Example label
    </span>
    <input
      aria-aria-describedby="checkbox-validation-message-id-test"
      class="checkbox-component-input"
      id="checkbox-id-test"
      type="checkbox"
      value="example-value"
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="
    validation-message
    error
    checkbox-validation-message}
  "
      id="validation-message-id-test"
      role="alert"
    >
      Error text
    </span>
  </label>
</div>
`;

exports[`Checkbox > Checkbox renders snapshot 1`] = `
<div>
  <label
    class="
    checkbox-component
    default
    right
    
    
    
    
  "
    for="checkbox-id-test"
  >
    <span
      class="
    label-text-component
    
    
    
    checkbox-component-label
  "
    >
      Example label
    </span>
    <input
      aria-aria-describedby="checkbox-validation-message-id-test"
      class="checkbox-component-input"
      id="checkbox-id-test"
      type="checkbox"
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="
    validation-message
    error
    checkbox-validation-message}
  "
      id="validation-message-id-test"
      role="alert"
    >
      Error text
    </span>
  </label>
</div>
`;

exports[`Checkbox > Checkbox renders with the correct label 1`] = `
<div>
  <label
    class="
    checkbox-component
    default
    right
    
    
    
    
  "
    for="checkbox-id-test"
  >
    <span
      class="
    label-text-component
    
    
    
    checkbox-component-label
  "
    >
      Example label
    </span>
    <input
      aria-aria-describedby="checkbox-validation-message-id-test"
      class="checkbox-component-input"
      id="checkbox-id-test"
      type="checkbox"
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="
    validation-message
    error
    checkbox-validation-message}
  "
      id="validation-message-id-test"
      role="alert"
    >
      Error text
    </span>
  </label>
</div>
`;
